tests/sksl/errors/PrototypeInFuncBody.dsl.glsl
### Compilation failed:

error: expected ';', but found '('
error: expected expression, but found ')'
2 errors
